// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecurityMethodSelector in settings context (with currentMethod) disables current method option (Device Auth) 1`] = `
[
  <View
    importantForAccessibility="yes"
    style={
      {
        "display": "flex",
        "flex": 1,
      }
    }
    testID="com.ariesbifold:id/BCSCLoadingProviderChildren"
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "off",
        }
      }
      style={
        [
          {
            "backgroundColor": "#F2F2F2",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "padding": 16,
            },
            {
              "gap": 24,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
      >
        <View>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 26,
                  "fontWeight": "bold",
                },
                undefined,
              ]
            }
          >
            BCSC.Onboarding.SecureAppHeader
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.Onboarding.SecureAppContent
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 8,
                "flexDirection": "row",
                "gap": 8,
                "padding": 16,
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#003366",
                    "fontSize": 24,
                  },
                  undefined,
                  {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 14,
                      "fontWeight": "normal",
                    },
                    undefined,
                  ]
                }
              >
                BCSC.Settings.AppSecurity.CurrentMethod
              </Text>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                    },
                    undefined,
                  ]
                }
              >
                Face id
              </Text>
            </View>
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#2E8540",
                    "fontSize": 24,
                  },
                  undefined,
                  {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
          <View
            accessibilityLabel="BCSC.Onboarding.SecureAppDeviceAuthTitle"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "backgroundColor": "#003366",
                  "borderRadius": 4,
                  "padding": 16,
                },
                {
                  "opacity": 0.6,
                },
              ]
            }
            testID="com.ariesbifold:id/ChooseDeviceAuthButton"
          >
            <View
              style={
                {
                  "gap": 8,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    [
                      {
                        "color": "#313132",
                        "fontFamily": "BCSans-Regular",
                        "fontSize": 21,
                        "fontWeight": "bold",
                      },
                      undefined,
                    ]
                  }
                >
                  BCSC.Onboarding.SecureAppDeviceAuthTitle
                </Text>
              </View>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "fontSize": 18,
                      "lineHeight": 30,
                    },
                  ]
                }
              >
                BCSC.Settings.AppSecurity.CurrentlySelected
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="BCSC.Onboarding.SecureAppPINTitle"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "backgroundColor": "#003366",
                  "borderRadius": 4,
                  "padding": 16,
                },
                false,
              ]
            }
            testID="com.ariesbifold:id/ChoosePINButton"
          >
            <View
              style={
                {
                  "gap": 8,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    [
                      {
                        "color": "#313132",
                        "fontFamily": "BCSans-Regular",
                        "fontSize": 21,
                        "fontWeight": "bold",
                      },
                      undefined,
                    ]
                  }
                >
                  BCSC.Onboarding.SecureAppPINTitle
                </Text>
              </View>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "fontSize": 18,
                      "lineHeight": 30,
                    },
                  ]
                }
              >
                BCSC.Onboarding.SecureAppPINSubtext
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="BCSC.Onboarding.LearnMore"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "backgroundColor": "#003366",
                  "borderRadius": 4,
                  "padding": 16,
                },
                undefined,
              ]
            }
            testID="com.ariesbifold:id/LearnMoreButton"
          >
            <View
              style={
                {
                  "gap": 8,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    [
                      {
                        "color": "#313132",
                        "fontFamily": "BCSans-Regular",
                        "fontSize": 21,
                        "fontWeight": "bold",
                      },
                      undefined,
                    ]
                  }
                >
                  BCSC.Onboarding.LearnMore
                </Text>
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": undefined,
                        "fontSize": 32,
                      },
                      {
                        "color": "#313132",
                      },
                      {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>,
  <View
    accessible={false}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "display": "none",
        "pointerEvents": "none",
      }
    }
    testID="com.ariesbifold:id/BCSCLoadingProviderOverlay"
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        {
          "backgroundColor": "#F2F2F2",
          "flex": 1,
        }
      }
      testID="com.ariesbifold:id/LoadingScreenContent"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "gap": 24,
            "justifyContent": "center",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={113}
          bbWidth={113}
          fill="none"
          focusable={false}
          height={113}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 113,
                "width": 113,
              },
            ]
          }
          vbHeight={113}
          vbWidth={113}
          width={113}
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGClipPath
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                name="clip0_369_1738"
              >
                <RNSVGRect
                  fill={
                    {
                      "payload": 4294967295,
                      "type": 0,
                    }
                  }
                  height="113"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="113"
                  x={0}
                  y={0}
                />
              </RNSVGClipPath>
            </RNSVGDefs>
            <RNSVGGroup
              clipPath="clip0_369_1738"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M56.5969 112.989C87.7416 112.989 112.989 87.7416 112.989 56.5969C112.989 25.4523 87.7416 0.20459 56.5969 0.20459C25.4523 0.20459 0.20459 25.4523 0.20459 56.5969C0.20459 87.7416 25.4523 112.989 56.5969 112.989Z"
                fill={
                  {
                    "payload": 4294493282,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M112.985 56.5969C112.985 87.7377 87.7378 112.985 56.5969 112.985C25.4561 112.985 0.20459 87.7377 0.20459 56.5969C0.20459 53.1345 0.51563 49.7458 1.11315 46.4594L13.3051 41.0613L17.1317 43.0953L20.2871 44.0693L20.4549 44.0243C20.4549 44.0243 23.7086 42.5305 24.5271 42.0148L29.3155 47.0611C29.3155 47.0611 39.7107 55.2995 40.0136 55.2995C40.3165 55.2995 49.1893 50.151 49.1893 50.151L57.1372 44.6914L64.066 49.7376L69.2636 50.769L74.1052 54.2723C74.1052 54.2723 86.7269 45.8333 88.7732 44.8019L94.8139 47.1552L103.797 40.8525L111.864 45.3503C112.6 48.9846 112.985 52.7457 112.985 56.5969Z"
                fill={
                  {
                    "payload": 4280500341,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGMask
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                height="113"
                maskContentUnits={1}
                maskType={0}
                maskUnits={0}
                name="mask0_369_1738"
                width="113"
                x="0"
                y="0"
              >
                <RNSVGPath
                  d="M56.5969 112.989C87.7416 112.989 112.989 87.7416 112.989 56.5969C112.989 25.4523 87.7416 0.20459 56.5969 0.20459C25.4523 0.20459 0.20459 25.4523 0.20459 56.5969C0.20459 87.7416 25.4523 112.989 56.5969 112.989Z"
                  fill={
                    {
                      "payload": 4292467161,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGMask>
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                mask="mask0_369_1738"
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  matrix={
                    [
                      1,
                      0,
                      -0,
                      1,
                      -0.2640023024576092,
                      0,
                    ]
                  }
                >
                  <RNSVGPath
                    d="M240.917 81.6561C211.364 81.6561 211.364 70.1968 181.815 70.1968C152.262 70.1968 152.262 81.6561 122.713 81.6561C93.1606 81.6561 93.1606 70.1968 63.6077 70.1968C34.0548 70.1968 34.0548 81.6561 4.50195 81.6561V123.278H240.921V81.6561H240.917Z"
                    fill={
                      {
                        "payload": 4285971199,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M240.917 81.6561C211.364 81.6561 211.364 70.1968 181.815 70.1968C152.262 70.1968 152.262 81.6561 122.713 81.6561C93.1606 81.6561 93.1606 70.1968 63.6077 70.1968C34.0548 70.1968 34.0548 81.6561 4.50195 81.6561V123.278H240.921V81.6561H240.917Z"
                    fill={
                      {
                        "payload": 4285971199,
                        "type": 0,
                      }
                    }
                    matrix={
                      [
                        1,
                        0,
                        0,
                        1,
                        236,
                        0,
                      ]
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
        <View
          style={
            {
              "padding": 24,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 21,
                  "fontWeight": "bold",
                },
                {
                  "textAlign": "center",
                },
              ]
            }
          >
            BCSC.Loading.DefaultMessage
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>,
]
`;

exports[`SecurityMethodSelector when device auth is NOT available renders PIN-only view with buttons 1`] = `
[
  <View
    importantForAccessibility="yes"
    style={
      {
        "display": "flex",
        "flex": 1,
      }
    }
    testID="com.ariesbifold:id/BCSCLoadingProviderChildren"
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "off",
        }
      }
      style={
        [
          {
            "backgroundColor": "#F2F2F2",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "padding": 16,
            },
            {
              "gap": 24,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
      >
        <View>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 26,
                  "fontWeight": "bold",
                },
                undefined,
              ]
            }
          >
            BCSC.Onboarding.SecureAppHeader
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.Onboarding.SecureAppNoDeviceAuthContent1
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.Onboarding.SecureAppNoDeviceAuthContent2
          </Text>
        </View>
      </RCTScrollView>
      <View
        style={
          [
            {
              "gap": 16,
            },
            {
              "paddingBottom": 16,
              "paddingHorizontal": 16,
            },
            undefined,
          ]
        }
      >
        <View
          accessibilityLabel="BCSC.Onboarding.SecureAppPINTitle"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#003366",
              "borderRadius": 4,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/ChoosePINButton"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#FFFFFF",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                    false,
                  ],
                ]
              }
            >
              BCSC.Onboarding.SecureAppPINTitle
            </Text>
          </View>
        </View>
        <View
          accessibilityLabel="BCSC.Onboarding.LearnMore"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderColor": "#003366",
              "borderRadius": 4,
              "borderWidth": 2,
              "opacity": 1,
              "padding": 16,
            }
          }
          testID="com.ariesbifold:id/LearnMoreButton"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#003366",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "textAlign": "center",
                    },
                    false,
                    false,
                  ],
                ]
              }
            >
              BCSC.Onboarding.LearnMore
            </Text>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>,
  <View
    accessible={false}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "display": "none",
        "pointerEvents": "none",
      }
    }
    testID="com.ariesbifold:id/BCSCLoadingProviderOverlay"
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        {
          "backgroundColor": "#F2F2F2",
          "flex": 1,
        }
      }
      testID="com.ariesbifold:id/LoadingScreenContent"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "gap": 24,
            "justifyContent": "center",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={113}
          bbWidth={113}
          fill="none"
          focusable={false}
          height={113}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 113,
                "width": 113,
              },
            ]
          }
          vbHeight={113}
          vbWidth={113}
          width={113}
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGClipPath
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                name="clip0_369_1738"
              >
                <RNSVGRect
                  fill={
                    {
                      "payload": 4294967295,
                      "type": 0,
                    }
                  }
                  height="113"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="113"
                  x={0}
                  y={0}
                />
              </RNSVGClipPath>
            </RNSVGDefs>
            <RNSVGGroup
              clipPath="clip0_369_1738"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M56.5969 112.989C87.7416 112.989 112.989 87.7416 112.989 56.5969C112.989 25.4523 87.7416 0.20459 56.5969 0.20459C25.4523 0.20459 0.20459 25.4523 0.20459 56.5969C0.20459 87.7416 25.4523 112.989 56.5969 112.989Z"
                fill={
                  {
                    "payload": 4294493282,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M112.985 56.5969C112.985 87.7377 87.7378 112.985 56.5969 112.985C25.4561 112.985 0.20459 87.7377 0.20459 56.5969C0.20459 53.1345 0.51563 49.7458 1.11315 46.4594L13.3051 41.0613L17.1317 43.0953L20.2871 44.0693L20.4549 44.0243C20.4549 44.0243 23.7086 42.5305 24.5271 42.0148L29.3155 47.0611C29.3155 47.0611 39.7107 55.2995 40.0136 55.2995C40.3165 55.2995 49.1893 50.151 49.1893 50.151L57.1372 44.6914L64.066 49.7376L69.2636 50.769L74.1052 54.2723C74.1052 54.2723 86.7269 45.8333 88.7732 44.8019L94.8139 47.1552L103.797 40.8525L111.864 45.3503C112.6 48.9846 112.985 52.7457 112.985 56.5969Z"
                fill={
                  {
                    "payload": 4280500341,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGMask
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                height="113"
                maskContentUnits={1}
                maskType={0}
                maskUnits={0}
                name="mask0_369_1738"
                width="113"
                x="0"
                y="0"
              >
                <RNSVGPath
                  d="M56.5969 112.989C87.7416 112.989 112.989 87.7416 112.989 56.5969C112.989 25.4523 87.7416 0.20459 56.5969 0.20459C25.4523 0.20459 0.20459 25.4523 0.20459 56.5969C0.20459 87.7416 25.4523 112.989 56.5969 112.989Z"
                  fill={
                    {
                      "payload": 4292467161,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGMask>
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                mask="mask0_369_1738"
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  matrix={
                    [
                      1,
                      0,
                      -0,
                      1,
                      -0.2640023024576092,
                      0,
                    ]
                  }
                >
                  <RNSVGPath
                    d="M240.917 81.6561C211.364 81.6561 211.364 70.1968 181.815 70.1968C152.262 70.1968 152.262 81.6561 122.713 81.6561C93.1606 81.6561 93.1606 70.1968 63.6077 70.1968C34.0548 70.1968 34.0548 81.6561 4.50195 81.6561V123.278H240.921V81.6561H240.917Z"
                    fill={
                      {
                        "payload": 4285971199,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M240.917 81.6561C211.364 81.6561 211.364 70.1968 181.815 70.1968C152.262 70.1968 152.262 81.6561 122.713 81.6561C93.1606 81.6561 93.1606 70.1968 63.6077 70.1968C34.0548 70.1968 34.0548 81.6561 4.50195 81.6561V123.278H240.921V81.6561H240.917Z"
                    fill={
                      {
                        "payload": 4285971199,
                        "type": 0,
                      }
                    }
                    matrix={
                      [
                        1,
                        0,
                        0,
                        1,
                        236,
                        0,
                      ]
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
        <View
          style={
            {
              "padding": 24,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 21,
                  "fontWeight": "bold",
                },
                {
                  "textAlign": "center",
                },
              ]
            }
          >
            BCSC.Loading.DefaultMessage
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>,
]
`;

exports[`SecurityMethodSelector when device auth is available renders both device auth and PIN options 1`] = `
[
  <View
    importantForAccessibility="yes"
    style={
      {
        "display": "flex",
        "flex": 1,
      }
    }
    testID="com.ariesbifold:id/BCSCLoadingProviderChildren"
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "off",
        }
      }
      style={
        [
          {
            "backgroundColor": "#F2F2F2",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "padding": 16,
            },
            {
              "gap": 24,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
      >
        <View>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 26,
                  "fontWeight": "bold",
                },
                undefined,
              ]
            }
          >
            BCSC.Onboarding.SecureAppHeader
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.Onboarding.SecureAppContent
          </Text>
          <View
            accessibilityLabel="BCSC.Onboarding.SecureAppDeviceAuthTitle"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "backgroundColor": "#003366",
                  "borderRadius": 4,
                  "padding": 16,
                },
                false,
              ]
            }
            testID="com.ariesbifold:id/ChooseDeviceAuthButton"
          >
            <View
              style={
                {
                  "gap": 8,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    [
                      {
                        "color": "#313132",
                        "fontFamily": "BCSans-Regular",
                        "fontSize": 21,
                        "fontWeight": "bold",
                      },
                      undefined,
                    ]
                  }
                >
                  BCSC.Onboarding.SecureAppDeviceAuthTitle
                </Text>
              </View>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "fontSize": 18,
                      "lineHeight": 30,
                    },
                  ]
                }
              >
                BCSC.Onboarding.SecureAppDeviceAuthSubtext
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="BCSC.Onboarding.SecureAppPINTitle"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "backgroundColor": "#003366",
                  "borderRadius": 4,
                  "padding": 16,
                },
                false,
              ]
            }
            testID="com.ariesbifold:id/ChoosePINButton"
          >
            <View
              style={
                {
                  "gap": 8,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    [
                      {
                        "color": "#313132",
                        "fontFamily": "BCSans-Regular",
                        "fontSize": 21,
                        "fontWeight": "bold",
                      },
                      undefined,
                    ]
                  }
                >
                  BCSC.Onboarding.SecureAppPINTitle
                </Text>
              </View>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "fontSize": 18,
                      "lineHeight": 30,
                    },
                  ]
                }
              >
                BCSC.Onboarding.SecureAppPINSubtext
              </Text>
            </View>
          </View>
          <View
            accessibilityLabel="BCSC.Onboarding.LearnMore"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "backgroundColor": "#003366",
                  "borderRadius": 4,
                  "padding": 16,
                },
                undefined,
              ]
            }
            testID="com.ariesbifold:id/LearnMoreButton"
          >
            <View
              style={
                {
                  "gap": 8,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  }
                }
              >
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    [
                      {
                        "color": "#313132",
                        "fontFamily": "BCSans-Regular",
                        "fontSize": 21,
                        "fontWeight": "bold",
                      },
                      undefined,
                    ]
                  }
                >
                  BCSC.Onboarding.LearnMore
                </Text>
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": undefined,
                        "fontSize": 32,
                      },
                      {
                        "color": "#313132",
                      },
                      {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>,
  <View
    accessible={false}
    importantForAccessibility="no-hide-descendants"
    style={
      {
        "display": "none",
        "pointerEvents": "none",
      }
    }
    testID="com.ariesbifold:id/BCSCLoadingProviderOverlay"
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        {
          "backgroundColor": "#F2F2F2",
          "flex": 1,
        }
      }
      testID="com.ariesbifold:id/LoadingScreenContent"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "gap": 24,
            "justifyContent": "center",
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={113}
          bbWidth={113}
          fill="none"
          focusable={false}
          height={113}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 113,
                "width": 113,
              },
            ]
          }
          vbHeight={113}
          vbWidth={113}
          width={113}
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
              ]
            }
          >
            <RNSVGDefs>
              <RNSVGClipPath
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                name="clip0_369_1738"
              >
                <RNSVGRect
                  fill={
                    {
                      "payload": 4294967295,
                      "type": 0,
                    }
                  }
                  height="113"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="113"
                  x={0}
                  y={0}
                />
              </RNSVGClipPath>
            </RNSVGDefs>
            <RNSVGGroup
              clipPath="clip0_369_1738"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            >
              <RNSVGPath
                d="M56.5969 112.989C87.7416 112.989 112.989 87.7416 112.989 56.5969C112.989 25.4523 87.7416 0.20459 56.5969 0.20459C25.4523 0.20459 0.20459 25.4523 0.20459 56.5969C0.20459 87.7416 25.4523 112.989 56.5969 112.989Z"
                fill={
                  {
                    "payload": 4294493282,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGPath
                d="M112.985 56.5969C112.985 87.7377 87.7378 112.985 56.5969 112.985C25.4561 112.985 0.20459 87.7377 0.20459 56.5969C0.20459 53.1345 0.51563 49.7458 1.11315 46.4594L13.3051 41.0613L17.1317 43.0953L20.2871 44.0693L20.4549 44.0243C20.4549 44.0243 23.7086 42.5305 24.5271 42.0148L29.3155 47.0611C29.3155 47.0611 39.7107 55.2995 40.0136 55.2995C40.3165 55.2995 49.1893 50.151 49.1893 50.151L57.1372 44.6914L64.066 49.7376L69.2636 50.769L74.1052 54.2723C74.1052 54.2723 86.7269 45.8333 88.7732 44.8019L94.8139 47.1552L103.797 40.8525L111.864 45.3503C112.6 48.9846 112.985 52.7457 112.985 56.5969Z"
                fill={
                  {
                    "payload": 4280500341,
                    "type": 0,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
              <RNSVGMask
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                height="113"
                maskContentUnits={1}
                maskType={0}
                maskUnits={0}
                name="mask0_369_1738"
                width="113"
                x="0"
                y="0"
              >
                <RNSVGPath
                  d="M56.5969 112.989C87.7416 112.989 112.989 87.7416 112.989 56.5969C112.989 25.4523 87.7416 0.20459 56.5969 0.20459C25.4523 0.20459 0.20459 25.4523 0.20459 56.5969C0.20459 87.7416 25.4523 112.989 56.5969 112.989Z"
                  fill={
                    {
                      "payload": 4292467161,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "fill",
                    ]
                  }
                />
              </RNSVGMask>
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
                mask="mask0_369_1738"
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  matrix={
                    [
                      1,
                      0,
                      -0,
                      1,
                      -0.2640023024576092,
                      0,
                    ]
                  }
                >
                  <RNSVGPath
                    d="M240.917 81.6561C211.364 81.6561 211.364 70.1968 181.815 70.1968C152.262 70.1968 152.262 81.6561 122.713 81.6561C93.1606 81.6561 93.1606 70.1968 63.6077 70.1968C34.0548 70.1968 34.0548 81.6561 4.50195 81.6561V123.278H240.921V81.6561H240.917Z"
                    fill={
                      {
                        "payload": 4285971199,
                        "type": 0,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M240.917 81.6561C211.364 81.6561 211.364 70.1968 181.815 70.1968C152.262 70.1968 152.262 81.6561 122.713 81.6561C93.1606 81.6561 93.1606 70.1968 63.6077 70.1968C34.0548 70.1968 34.0548 81.6561 4.50195 81.6561V123.278H240.921V81.6561H240.917Z"
                    fill={
                      {
                        "payload": 4285971199,
                        "type": 0,
                      }
                    }
                    matrix={
                      [
                        1,
                        0,
                        0,
                        1,
                        236,
                        0,
                      ]
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
        <View
          style={
            {
              "padding": 24,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 21,
                  "fontWeight": "bold",
                },
                {
                  "textAlign": "center",
                },
              ]
            }
          >
            BCSC.Loading.DefaultMessage
          </Text>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>,
]
`;
